test/execflags/tmacd/config_ref.good
config_ref.chpl:2: error: syntax error near 'ref'
